<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C1E0E4"
        android:gravity="top"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C1E0E4">

            <TextView
                android:id="@+id/chooseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_lang"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BE23E12B">

            <Spinner
                android:id="@+id/choseLang"
                android:layout_width="198dp"
                android:layout_height="39dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E62AA2D8">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="198dp"
                        android:layout_height="117dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/inch" />

                        <RadioButton
                            android:id="@+id/radioButton1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ml" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ft" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="235dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radioButton4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/m" />

                        <RadioButton
                            android:id="@+id/radioButton5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/km" />

                        <RadioButton
                            android:id="@+id/radioButton6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cm" />
                    </LinearLayout>

                </LinearLayout>

            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="0"
                android:textSize="36sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="229dp"
            android:layout_height="181dp"
            android:background="#BE23E12B">

            <LinearLayout
                android:layout_width="312dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/res1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ml"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/res2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ft"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/res3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inch"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/res4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/m"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/res5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/km"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/res6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cm"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>